--- a/fuel/README
+++ b/fuel/README
@@ -1,7 +1,9 @@
 #テスト設計
 ユーザが使う
-#テストコード
+
+#seleniumを使ったテスト(searverの起動)
+java -jar ~/bin/selenium-server-standalone-2.23.1.jar
+
+#テストコード(seleniumを起動後実行)
 php oil test --group=App
 
-#behavor test
-http://docs.behat.org/quick_intro.html#installation
